fix(124): restore native select arrow, keep right padding for spacing

--- a/apps/website/app/scss/components/_input.scss
+++ b/apps/website/app/scss/components/_input.scss
@@ -16,13 +16,9 @@
     }
 
     &__select {
-      appearance: none;
       border: none;
       border-right: 1px solid $platinum;
       background-color: $ghost_white;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='6' viewBox='0 0 10 6'%3E%3Cpath d='M0 0l5 6 5-6z' fill='%23555555'/%3E%3C/svg%3E");
-      background-repeat: no-repeat;
-      background-position: right 8px center;
       color: $charcoal;
       padding: 0 28px 0 10px;
       font-size: 14px;
